Upgrade Java to version 21